--- a/transcriptions/29v.md
+++ b/transcriptions/29v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 In redoutyng of mars and of his glorie  
 Now to þe temple of Diane þe chaste  
@@ -13,12 +13,13 @@ To telle ȝou all þe discripcion̄
 Depeynted ben þe walles vp and don̄  
 Of huntyng and of schamefast chastite  
 Ther saugh I how woful Calistope  
-Whan þat Diane agreued was with here  
-Was torned fro a wom̄an til a bere  
+whan þat Diane agreued was with here  
+was torned fro a wom̄an til a bere  ¶Vrsa maior
 And after was sche maad þe loode sterre  
-Hire sone is eek a sterre as men may se  
+þus was sche peynted I can ȝou seye no ferre  
+hire sone is eek a sterre as men may se  
 Ther saugh I dane torned til a tree  
-I mene nat þe goddesse Diane  
+I mene nat þe goddesse diane  
 But Penneus doughter which þat hight Dane  
 ¶ Ther saugh I accheon an herte y maked  
 ffor vengance þat he saugh Diane al naked  
@@ -31,10 +32,11 @@ ffor which Diane wrought him care and wo
 Ther saugh I many anoþer wonder storie  
 The which me list nat drawe to memorie  
 ¶ This goddess on an hert ful wel hiegh seet  
-Wiþ smale honndes all aboute hir feet  
+wiþ smale honndes all aboute hir feet  
 And vnder neþe hire feet sche hadde a moone  
-Wexynge it was and schulde wanye soone  
+wexynge it was and schulde wanye soone  
 In gaude greene hir statue cloþed was  
+wiþ bowe in honde and arwes in a caas  
 hir eyhen caste sche ful lowe a doun  
 Ther Pluto haþ his derke regioun  
 A wōman trauaillynge was hire biforn  
