--- a/transcriptions/30r.md
+++ b/transcriptions/30r.md
@@ -5,11 +5,11 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And seyde helpe for þou mayst best of all  
-Wel couþe he peynte lifly þat it wrought  
-Wiþ many a floreyne he þe hewes bought  
+wel couþe he peynte lifly þat it wrought  
+wiþ many a floreyne he þe hewes bought  
 Now ben þise listes maad an Theseus  
 That at his grete cost arraied thus  
 The temples and þe Theatres euerydel  
@@ -20,8 +20,8 @@ The day approcheþ and hir retornynge
 That eueriche scholde an hundred knightes bringe  
 The bataille to darrayne as I ȝou tolde  
 And til athenes hire couenant for to holde  
-Haþ eu̔ych of hem brought an .C. knightes  
-Wel armed for þe werre at all rightes  
+haþ eu̔ych of hem brought an .C. knightes  
+wel armed for þe werre at all rightes  
 And sikerly þer trowed many a man  
 That neuer siþþen þat þe world bigan  
 That for to speke of knighthode of here hond  
@@ -29,17 +29,17 @@ As ferre as god haþ maked see or lond
 Nas of so fewe so noble a companye  
 ffor euery wight þat loued chiualrie  
 And wolde his þankes haue a passant name  
-Haþ preyed þat he mighte ben of þat game  
+haþ preyed þat he mighte ben of þat game  
 A wel was him þat þer to chosen was  
 ffor if þer fille to morwe such a caas  
 ȝe knowe wel þat euery lusty knight  
 That loueþ ꝑamours and haþ his might  
-Were it in Ingelond or elles where  
+were it in Ingelond or elles where  
 Thei wolde here þankes wilnen to be þere  
 To fighte for a lady benedicite  
 It were a lusty sighte for to see  
 And right so ferden þey with Palamon  
-With him þer wente knightes many on  
+with him þer wente knightes many on  
 Som wol ben armed in an habergeon  
 And in a brest plate and in a light Iepon  
 And some wol haue a paire plates large  
