--- a/transcriptions/30v.md
+++ b/transcriptions/30v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And som wil haue a pruce scheld or a targe  
 Som wol ben armed on his legges wel  
@@ -18,14 +18,14 @@ Blak was his berd and manly was his face
 The cercles of his yhen in his heede  
 Thei gloweden bitwixe yelow and rede  
 And lik a griffon̄ loked he aboute  
-With kempe heres on his browes stoute  
+with kempe heres on his browes stoute  
 his lymes grete his braunes harde and strong  
 his schuldernes brode his armes round and long  
 And as þe gyse was in his cuntre  
 fful heighe vpon a chaar of gold stood he  
-Wiþ foure white boles in þe trays  
+wiþ foure white boles in þe trays  
 In stede of cote armour ouer his harnays  
-Wiþ nayles yelowe and bright as eny golde  
+wiþ nayles yelowe and bright as eny golde  
 he hadde a berskynne coleblak for olde  
 his longe her was kembed byhynde his bak  
 As eny rauenes feþer it schon for blak  
@@ -39,5 +39,6 @@ And folwed him with mosel fast y bounde
 Coleres of gold and torettes filed rounde  
 And C. lordes haddes he in his route  
 Armed ful wel wiþ hertes sterne and stoute  
-¶ Wiþ arcita in stories as men fynde  
+¶ wiþ arcita in stories as men fynde  
+The grete Emetreus þe king of Inde  
 vpon a steede bay trapped in steel  
