--- a/transcriptions/31r.md
+++ b/transcriptions/31r.md
@@ -5,25 +5,25 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 Couered in cloth of gold diapred weel  
 Com ridyng lyk þe god of armes mars  
-His cote armure was of cloþ of Tars  
+his cote armure was of cloþ of Tars  
 Couched with perles whit and round and grete  
-His sadel was of brent gold newe I bete  
+his sadel was of brent gold newe I bete  
 A mantelet vpon his schuldern̄ hangynge  
 Bret ful of Rubyes reede as fyr sparclynge  
-His crispe her lik rynges was I ronne  
+his crispe her lik rynges was I ronne  
 And þat was yelow and glitering as þe sonne  
-His nose was highe his eyen bright Cytryn  
-His lippes rounde his colour was sanguyn  
+his nose was highe his eyen bright Cytryn  
+his lippes rounde his colour was sanguyn  
 A fewe frakenes in his face y spreynd  
 Betwixe yelow and somdel blak y meynd  
 And as a leon̄ he his lokyng caste  
 Of fyue and twenty ȝeer his age I caste  
-His berd was wel begonne for to springe  
-His voys was as a trompe thunderinge  
+his berd was wel begonne for to springe  
+his voys was as a trompe thunderinge  
 vpon his heed he wered a laurer grene  
 A garland freissche and lusty for to seene  
 vpon his hand he bar for his deduyt  
@@ -32,14 +32,14 @@ And C. lordes hadde he with him þere
 All armed saue here heedes in al here gere  
 fful richely in all maner þinges  
 ffor trusteþ wel þat Dukes Erles kynges  
-Were gadred in þis noble companye  
+were gadred in þis noble companye  
 ffor loue and for encrees of chiualrie  
-aboute þis king þer ran on eu̔ry part  
+aboute þis king þer ran on eu̔y part  
 fful many a tame leon̄ and lepart  
 And in þis wise þise lordes all and some  
 Ben on þe soneday to þe Cite come  
 Aboute p̉me and in þe toun alighte  
 This Theseus þis Duk þis worþi knighte  
-Whan he hadde brought hem in to his Cite  
+whan he hadde brought hem in to his Cite  
 And Inned hem eu̔ich at his degre  
-He festeþ hem and doþ so gret labour  
+he festeþ hem and doþ so gret labour  
