--- a/transcriptions/31v.md
+++ b/transcriptions/31v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 To eesen hem and don hem all honour  
 That yet men weneþ þat no mannes wit  
@@ -13,19 +13,19 @@ The menstralcye þe ẜiuse atte feste
 The grete ȝiftes to þe meste and leste  
 The riche array of Theseus Paleys  
 Ne who sat ferst ne last vpon þe deys  
-What ladies fairest ben or best daunsynge  
+what ladies fairest ben or best daunsynge  
 Or which of hem can best daunsen or synge  
 Ne who most felynglik spekeþ of loue  
-What haukes sitten on þe ꝑche aboue  
-What houndes liggen on þe flor adoun   
+what haukes sitten on þe ꝑche aboue  
+what houndes liggen on þe flor adoun   
 Of all þis make I now no mencion̄  
 But alle þeffecte þat þinkeþ me þe beste  
 Now comeþ þe poynt and herkneþ if ȝou lest  
-¶ The sonday night arday bigan to springe  
-Whan Palamon þe larke herde synge  
+¶ The sonday night ar day bigan to springe  
+whan Palamon þe larke herde synge  
 Al þough it nere nought day by houres tuo  
-Ȝet song þe larke and Palamon right þo  
-Wiþ holy herte and with an heigh corage  
+ȝet song þe larke and Palamon right þo  
+wiþ holy herte and with an heigh corage  
 he ros to wenden on his pilgrimage  
 vnto þe blissful Citharea benigne  
 I mene Venus honorable and digne  
@@ -34,8 +34,8 @@ vnto þe lystes þer hire temple was
 And doun he kneleþ and wiþ humble chere  
 and herte sore he seyde as ȝe schal heere  
 ¶ ffairest of faire O lady myn Venus  
-Doughter to Ioue and spouse to Vulncanus  
-Though glader of þe moūt of Citheron̄  
+Doughter to Ioue and spouse to Vulcanus  
+Thou glader of þe moūt of Citheron̄  
 ffor þilke loue þou haddest to adon̄  
 haue pite of my bittre teeres smerte  
 and tak myn humble preier at þin herte  
