--- a/transcriptions/32r.md
+++ b/transcriptions/32r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [X] Double checked
 
 I am so confuse þat I can not seye  
 But mercy lady bright þat knowest wele  
@@ -14,7 +14,7 @@ Considere al þis and rewe vpon my soore
 As wisly as I schal for euermore  
 Emforth my might þi trewe ẜuan̄t be  
 And holden werre alwey wiþ chastite  
-That I make myn avow so ȝe me helpe  
+That I make myn aVow so ȝe me helpe  
 I keepe nought of armes for to yelpe  
 Ne I ne axe nought to morwe to haue victorie  
 Ne renon̄ in þis caas ne veine glorie  
