--- a/transcriptions/32v.md
+++ b/transcriptions/32v.md
@@ -4,12 +4,12 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And made a signe wherby þat he took  
 That his prayer accepted was þat day  
 ffor þough þe signe schewed a delay  
-Ȝit wist he weel þat gũnted was his boone  
+ȝit wist he weel þat gũnted was his boone  
 And with glad herte he went him home ful soone  
 The þridde hour inequal þat Palamon  
 Bigan to venus temple for to gon  
@@ -17,7 +17,7 @@ vp roos þe soune and vp roos Emelye
 And to þe temple of Diane gan hye  
 hir maydenes þat þider with hir ladde  
 fful redily with hem þe fyr þey hadde  
-Thencens þe cloþes and þ remenant all  
+Thencens þe cloþes and þe remenant all  
 That to þe sacrifice longen schall  
 The hornes full of methe as was þe gise  
 Ther lacked nat to do hir sacrifise  
@@ -29,13 +29,13 @@ But it be eny þing in gen̔al
 And ȝit it were a game to here it al  
 To him that meneþ wel it nere no charge  
 But it is good a man be at his large  
-hire brighte heer wss kempt vntressed al  
+hire brighte heer was kempt vntressed al  
 A Corone of a grene oke Serial  
 vpon hire heed set ful faire and mete  
 Tuo fyres on þe auter gan sche beete  
 And dede hire þinges as men may biholde  
 In Stace of Thebes and þise bookes olde  
-Whan kyndled was þe fyr wiþ pitous cheere  
+whan kyndled was þe fyr wiþ pitous cheere  
 vnto Diane sche spak as þe may heere  
 O chaste goddesse of þe woodes greene  
 To whom boþe heuen and erþe and see is seene  
