--- a/transcriptions/33r.md
+++ b/transcriptions/33r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 As keepe me fro þi vengance and þin Ire  
 That attheon aboughte cruelly  
@@ -37,7 +37,7 @@ Syn þou art maiden and keꝑe of vs all
 My maydenhode þou kepe and wel conserue  
 And whil I lyue a maide I wol ȝou serue  
 ¶ The fires brennen vpo þe auter cleer  
-Whil Emelye was þus in hire preyer  
+whil Emelye was þus in hire preyer  
 But sodeinly sche saugh a sighte queynte  
 ffor right anon on of þe fyres queynte  
 And quiked agayn and after þat anon  
