--- a/transcriptions/33v.md
+++ b/transcriptions/33v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [X] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 As don þese wete brondes in here brennynge  
 And at þe brondes ende out ran anon  
@@ -15,7 +15,7 @@ ffor sch ne wiste what it signefied
 But oonly for þe feer þus haþ sche cried  
 And weepe þat it was pite for to heere  
 And þer with al Diane gan appeere  
-With bowe in hand right as an hunteresse  
+with bowe in hand right as an hunteresse  
 And seyde doughter stynt þin heuynesse  
 Among þe goddes heigh it is affermed  
 And by eterne word writen and confermed  
@@ -38,7 +38,7 @@ This is þeffecte þer nys namore to seye
 The nexte hour of mars folwynge þis  
 Arcite vnto te temple walked is  
 Of fiers mars to don his sacrifise  
-Wiþ all þe rites of his payen wise  
-Wiþ pitous hert and heigh deuocion̄  
+wiþ all þe rites of his payen wise  
+wiþ pitous hert and heigh deuocion̄  
 Right þus to mars he seide his orison̄  
 O stronge god þat in þe regnes colde  
