--- a/transcriptions/34v.md
+++ b/transcriptions/34v.md
@@ -4,16 +4,16 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And in þi temple I wil my baner honge  
 And all þe armes of my companye  
 And eu̔emo vnto til þat day I dye  
 Eterne fire I wol byfore þe fynde  
 And eek to þis avow I wil me bynde  
-My berd myn here þat hongreþ longe a doun  
+My berd myn here þat hongeþ longe a doun  
 That neuer ȝet ne felte offension̄  
-Of resour nor of schere I wil þe yiue  
+Of rasour nor of schere I wil þe yiue  
 And ben þi trewe ẜuant whil I liue  
 Now lord haue rouþe vpon my sorwes sore  
 If me þe victorie I axe þe namore  
@@ -26,7 +26,7 @@ That it gan al þe temple for to light
 And sweete smel the ground anon vp yaf  
 And arcita anon his hand vp haf  
 And more encense in to þe fir he caste  
-With oþre rites moo and atte laste  
+with oþre rites moo and atte laste  
 The statut of mars bigan his hauberk rynge  
 And with þe soun he herd a mormoringe  
 fful lowe ⁊ dym þat seyde þis victorie  
@@ -40,5 +40,5 @@ Bitwixe venus þe goddesse of loue
 And Mars þe sterne god armipotent  
 That Iubiter was besy it to stent  
 Til þat þe pale Saturnus þe colde  
-That knew so many of auentures olde  
+That knewe so many of auentures olde  
 ffond in his olde exꝑience an arte  
