--- a/transcriptions/35r.md
+++ b/transcriptions/35r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 That he ful sone haþ plesed euery parte  
 A soþ is seyde elde haþ gret auantage  
@@ -16,14 +16,14 @@ Al be it þat it is agayn his kinde
 Of all þis strif he gan remedye fynde  
 My deere doughter Venus qd Saturne  
 My cours þat haþ so wide for to turne  
-Haþ more power þan wot any man  
+haþ more power þan wot any man  
 Myn is þe drynclyng in þe see so wan  
 Myn is þe prison̄ in þe derke cote  
 Myn is þe strangle and hangyng by þe þrote  
 The murmure and þe cherles rebellinge  
 The gronyng and þe priue emp̉sonynge  
 I do vengeance and plein correccion̄  
-Wil I dwelle in þe signe of þe leon̄  
+wil I dwelle in þe signe of þe leon̄  
 Myn is þe ruine of þe hihe halles  
 The fallyng of þe toures and of þe walles  
 vpon þe mynour and þe Carpenter  
@@ -36,10 +36,10 @@ That Palamon þat is þin owne knight
 Schal haue his lady as þou him bihight  
 Though mars schal helpe his knight ȝet naþeles  
 Betwixe ȝow þer moot be som tyme pees  
-All be ȝe nought boþe of oo compexion̄  
+All be ȝe nought boþe of oo complexion̄  
 That causeþ alday swich diuision̄  
 I am þin ayell redy ad þi wille  
-Weepe now namore I wil þi lust fulfille  
+weepe now namore I wil þi lust fulfille  
 ¶ Now wol I stente of þe goddes aboue  
 Of mars and of venus goddesses of loue  
 And telle yow as pleinly as I can  
