--- a/transcriptions/35v.md
+++ b/transcriptions/35v.md
@@ -4,7 +4,7 @@ date: June 2018
 author: Jenna Schoen
 ---
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 The grete effect for which þat I bygan  
 Gret was þe feste in Athenes þat day  
@@ -32,13 +32,13 @@ Gydyng of scheldes wiþ layners lasyng
 There as neede is þei were noþing ydel   
 The fomy steedes on þe goldene bridel  
 Gnawen and faste þe armureres also  
-Wiþ file and hamer priking to and fro  
+wiþ file and hamer priking to and fro  
 yomen on foote and comunes many oon  
-Wiþ schorte staues þikke as þey may gon  
+wiþ schorte staues þikke as þey may gon  
 Pypes trompes nakers Clarioūs  
 That in þe bataille blowe bloody sownes  
 The paleys ful of poeples vp and doun  
 here þre þere ten holdyng here question̄  
-Dyuynyng of þise Thebane knightes tuo  
+dyuynyng of þise Thebane knightes tuo  
 Som seide þus som seide it schal be so  
 Som holden with him with þe blake berde   
