--- a/transcriptions/34r.md
+++ b/transcriptions/34r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 Of trace honoured art and lord y holde  
 And hast in euery regne and euery londe  
@@ -18,14 +18,14 @@ Thy godhede þat I may ben oon of þine
 Than pray I þe to rewe vpon my pyne  
 ffor þilke pyne and þilke hoote fyre  
 In which þou whilom brendest for desire  
-Whan þat þou vsedest þi beaute  
+whan þat þou vsedest þi beaute  
 Of faire ȝonge freissche Venus free  
 And haddest hire in armes at þi wille  
 Al þough þe oones on a tyme mysfille  
-Whan Walcanus hadde caught þe in his laas  
+whan walcanus hadde caught þe in his laas  
 And fond þe ligging by his wijf allas  
 ffor þilke sorwe þat was in þin herte  
-Haue rouþe as wel vpon my peynes smerte  
+haue rouþe as wel vpon my peynes smerte  
 I am yong and vnconnyng as þou wost  
 And as I trowe with loue offended moost  
 That euer was ony lyues creature  
