small fix line 6

--- a/transcriptions/33v.md
+++ b/transcriptions/33v.md
@@ -11,7 +11,7 @@ And at þe brondes ende out ran anon
 As it were bloody dropes many on  
 ffor which so sore a gast was Emelye  
 That sche was ful ny mad and gan to crie  
-ffor sch ne wiste what it signefied  
+ffor sche ne wiste what it signefied  
 But oonly for þe feer þus haþ sche cried  
 And weepe þat it was pite for to heere  
 And þer with al Diane gan appeere  
