small correction line 16

--- a/transcriptions/22v.md
+++ b/transcriptions/22v.md
@@ -13,7 +13,7 @@ That Thebes bult or ferst þe toun bigan
 And of þe cite first was crouned king  
 Of his lynage am I and his ospring  
 By verray ligne as of þe stok roiall  
-And now I am so caytif and so prall  
+And now I am so caytif and so þrall  
 That he þat is my mortel enemy  
 I serue him as his squier pouerly  
 And ȝit doþ me Iuno wel more schame  
