working on new transcriptions

--- a/transcriptions/for_testing/cc_198/160r.md
+++ b/transcriptions/for_testing/cc_198/160r.md
@@ -4,7 +4,7 @@ date: July 2018
 author: G. E. Saretto
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 And so do men if I þe soþe seye schal  
@@ -24,4 +24,22 @@ Causeþ ful often to don amys oþer speken
 On euery wrong men may nouȝt ben awreken  
 After þe tyme moste be temꝑaunce  
 To euery wight þat can no gouernance  
-And 
+And þerfore haþ þis worþy wise knight  
+To lyue in ese suffraunce hire behight  
+And sche to him ful wisly gan to swere  
+That neuer schulde þer be defaute in here  
+here may men sen an humble wyse acord  
+Thus haþ sche take hire seruan̄t and hire lord  
+Seruaunt in loue and lord in mariage  
+Then was he boþe in lordschipe and ẜuage  
+Seruage nay but in lordschipe aboue  
+Seþyns þat he haþ boþe his lady and his loue  
+his lady certes and his wyf also  
+The whiche þat lawe of loue acordeþ þer to  
+And whan he was in þis ꝓsꝑite  
+home wiþ his wyf he goþ to his cuntre  
+Nouȝt fer fro pedmark þer as his dwellyng was  
+wher as he lyueþ in blisse and in solas  
+who couþe telle but he hadde wedded be  
+þe ioye þe ese and þe ꝓsperite  
+That is bitwixe an housebond and his wyf  
