--- a/transcriptions/28v.md
+++ b/transcriptions/28v.md
@@ -36,7 +36,7 @@ Al ful of schrikyng was þat sory place
 The sleer of himself yet saugh I þere  
 his herte hath baþed al his here  
 The nayl y dryuen in þe schood on night  
-The colde deth wiþ mouþ gapende vprighte  
+The colde deth wiþ mouþ gapende vpright  
 Amyddes of þe temple sat meschan̄ce  
 with disconfort and sory contenan̄ce  
 yet saugh I woodnesse laughyng in his rage  
