removed two macrons (40-41)

--- a/transcriptions/28v.md
+++ b/transcriptions/28v.md
@@ -37,8 +37,8 @@ The sleer of himself yet saugh I þere
 his herte hath baþed al his here  
 The nayl y dryuen in þe schood on night  
 The colde deth wiþ mouþ gapende vpright  
-Amyddes of þe temple sat meschan̄ce  
-with disconfort and sory contenan̄ce  
+Amyddes of þe temple sat meschance  
+with disconfort and sory contenance  
 yet saugh I woodnesse laughyng in his rage  
 Armed compleint out hees and feers outrage  
 The karoigne in þe busk wiþ þrote y korue  
