--- a/transcriptions/32v.md
+++ b/transcriptions/32v.md
@@ -36,7 +36,7 @@ Tuo fyres on þe auter gan sche beete
 And dede hire þinges as men may biholde  
 In Stace of Thebes and þise bookes olde  
 whan kyndled was þe fyr wiþ pitous cheere  
-vnto Diane sche spak as þe may heere  
+vnto Diane sche spak as ȝe may heere  
 O chaste goddesse of þe woodes greene  
 To whom boþe heuen and erþe and see is seene  
 Queen of þe regne of Pluto dirk and lowe  
