--- a/transcriptions/33v.md
+++ b/transcriptions/33v.md
@@ -23,7 +23,7 @@ Thou schalt be wedded vnto oon of þo
 þat han for þe so mochel care and wo  
 And vnto which of hem I may not telle  
 ffar wel for I ne may no lenger dwelle  
-The fyres which þat on myn auter breme  
+The fyres which þat on myn auter brenne  
 Schul þe declare ar þat ȝe gon henne  
 Thin auenture of loue as in þis caas  
 And wiþ þat word þe arwes in þe caas  
