--- a/transcriptions/35r.md
+++ b/transcriptions/35r.md
@@ -38,7 +38,7 @@ Though mars schal helpe his knight ȝet naþeles
 Betwixe ȝow þer moot be som tyme pees  
 All be ȝe nought boþe of oo complexion̄  
 That causeþ alday swich diuision̄  
-I am þin ayell redy ad þi wille  
+I am þin ayell redy at þi wille  
 weepe now namore I wil þi lust fulfille  
 ¶ Now wol I stente of þe goddes aboue  
 Of mars and of venus goddesses of loue  
