--- a/transcriptions/35v.md
+++ b/transcriptions/35v.md
@@ -35,7 +35,7 @@ Gnawen and faste þe armureres also
 wiþ file and hamer priking to and fro  
 yomen on foote and comunes many oon  
 wiþ schorte staues þikke as þey may gon  
-Pypes trompes nakers Clarioūs  
+Pypes trompes nakers Clarion̄s  
 That in þe bataille blowe bloody sownes  
 The paleys ful of poeples vp and doun  
 here þre þere ten holdyng here question̄  
