added thorn with t

--- a/transcriptions/r_3_2.md/140r.md
+++ b/transcriptions/r_3_2.md/140r.md
@@ -21,3 +21,8 @@ haþ gret ymachinacion̄
 what þing it signifie may  
 And naþeles whan it was day  
 he bad caste anker and abod  
+and whil þat he on anker rod  
+The wynd which was tofore stñge  
+vppon þe poynt began to change  
+And torneþ þider as it scholde  
+þo knew he wel
