--- a/transcriptions/for_testing/r_3_2.md/140v.md
+++ b/transcriptions/for_testing/r_3_2.md/140v.md
@@ -80,7 +80,7 @@ That al þe world it mighte knowe
 And vpon þis condicion̄  
 The dom in execucion̄  
 was putt anon wiþoute faile  
-and eu̔y man haþ gret m̉uaile  
+and eu̔y man haþ gret m̔uaile  
 which herde tellen of þis chaunce  
 And þenkeþ goddes purueiance  
 which doþ mercy forth wiþ iustice  
