--- a/transcriptions/for_testing/r_3_2.md/141v.md
+++ b/transcriptions/for_testing/r_3_2.md/141v.md
@@ -7,3 +7,80 @@ author: Jenna Schoen
 - [ ] Double checked
 
 Column 1:
+
+Now at þis time þat I schal  
+As for conclusion final  
+Counseil vppon þy nede sette  
+So þenke I finally to knette  
+Thy cause wher it is tobroke  
+and make an ende of þat is spoke  
+ffor I behighte þe þat þifte  
+fferst whan þou com vndir my schrifte  
+þat þough I toward Venus were  
+yit spak I suche wordes þere  
+þat for þe p̔stode which I haue  
+myn ordre and myn astat to saue  
+I seid I wolde of myn office  
+To v̉tu more þan to vice  
+Encline. and teche þe my lore  
+ffor þy to speken ou̔more  
+Of loue which þe may auaile  
+Tak loue wher it may auaile  
+ffor as of þis which þou art Inne  
+Be þat þou seist it is a synne  
+and synne may no pris deserue  
+wiþoute pris and who schal serue  
+I not what ꝓfit might auaile  
+Thus folweþ it if þou trauaile   
+wher þou no ꝓfit hast ne pris  
+Thou art toward þiself vnwis  
+and siþþe þou mightest lust atteyne  
+Of eu̔y lust þe ende is peyne  
+And eu̔y peyne is good to flee  
+So is it wonder þing to see  
+why such a þing schal be desired  
+þe more þat a stok is fired  
+þe raþere in to aisshe it torneþ  
+The foot which in þe were sporneþ  
+ffulofte his hed haþ ou̔throwe  
+þis loue is blind and can nought knowe   
+wher þat he goþ til he be falle  
+ffor þi but if it so bifalle  
+wiþ good counseil þat he be lad  
+him oughte for to ben adrad  
+ffor counseil passeþ all þing  
+To him which þenkþ to ben a king  
+and eu̔y man for his partie  
+A kingdom haþ to iustifie  
+þat is to seie his oughne doom  
+If he misrewele þat kingdoom  
+
+Column 2:
+
+he leeseþ himself and þat is more  
+Than if he loste schipp and oore  
+And al þe worldes good wiþ al  
+ffor what man̄ þat in special  
+he nought himself he haþ nought elles  
+Nomore þe perles þan þe schelles  
+Al is to him of oo Value  
+þough he hadde at his retenue  
+The wide world right as he wolde   
+whan he his herte haþ nought wiþholde  
+Toward himself. al is in vein  
+and þus my sone I wolde sein  
+As I seide er þat þou arise  
+Er þat þou falle in such a wise  
+þat þou ne might þiself recouer̉  
+ffor loue which þat blind was euer̉  
+Makþ all his ẜuantz blinde also  
+My sone and if þou haue ben so  
+yit is it tyme to wiþdrawe  
+and sett þin herte vnder þat lawe.  
+The which of reson̄ is gouerned.
+and nought of will and to be lerned  
+Ensamples þou hast many on  
+Of now and ek of tyme agon  
+That eu̔y lust is but a while  
+and who þat wole himself beguyle  
+he may þe raþer be deceyued  
