trinity gower transcriptions
141v-142v

--- a/transcriptions/for_testing/r_3_2.md/141v.md
+++ b/transcriptions/for_testing/r_3_2.md/141v.md
@@ -3,8 +3,8 @@ title: "Transcription of MS R.3.2 folio 141v"
 date: August 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
-- [ ] Double checked
+- [x] Transcribed
+- [x] Double checked
 
 Column 1:
 
@@ -60,13 +60,13 @@ Column 2:
 he leeseþ himself and þat is more  
 Than if he loste schipp and oore  
 And al þe worldes good wiþ al  
-ffor what man̄ þat in special  
+ffor what mā þat in special  
 he nought himself he haþ nought elles  
 Nomore þe perles þan þe schelles  
 Al is to him of oo Value  
 þough he hadde at his retenue  
 The wide world right as he wolde   
-whan he his herte haþ nought wiþholde  
+whan he his herte haþ nought wiþholde    
 Toward himself. al is in vein  
 and þus my sone I wolde sein  
 As I seide er þat þou arise  
@@ -77,10 +77,29 @@ Makþ all his ẜuantz blinde also
 My sone and if þou haue ben so  
 yit is it tyme to wiþdrawe  
 and sett þin herte vnder þat lawe.  
-The which of reson̄ is gouerned.
-and nought of will and to be lerned  
+The which of reson̄ is gouerned.  
+and nought of will and to be lerned    
 Ensamples þou hast many on  
 Of now and ek of tyme agon  
 That eu̔y lust is but a while  
 and who þat wole himself beguyle  
 he may þe raþer be deceyued  
+My sone now þou hast conceyued  
+Som what of þat I wolde meene  
+hier aftirward it schal be seene  
+If þat þou lerne vpon my lore  
+ffor I can do to þe nomore  
+But teche þe þe righte weie  
+and ches if þou wilt liue or deie  
+My fader so as I haue herd  
+youre tale but it were answerd  
+I were mochil for to blame  
+My wo to yow is but a game  
+þat feelen nought of þat I feele  
+The feeling of a mannes heele  
+May nought be likned to þe herte  
+I may nought þough I wolde asterte  
+And ye be fre from al þe peyne  
+Of loue. wher of I me pleyne  
+It is right esy to comānde.  
+þe hert. which free goþ on þe launde   
