--- a/transcriptions/for_testing/b_15_17/120r.md
+++ b/transcriptions/for_testing/b_15_17/120r.md
@@ -3,10 +3,10 @@ title: "Transcription of MS Cambridge Piers Plowman B.15.17 folio 120r"
 date: September 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
-That he þat Vseþ þe faireste craft. to þe fouleste I couþe have put hym  
+That he þat Vseþ þe faireste craft. to þe fouleste I kouþe haue put hym  
 Thynkeþ alle quod Grace. þͭ grace comeþ of my ȝifte  
 Lokeþ þͭ no man lakke ooþer. but loueþ alle as breþeren  
 ¶And who þat moost maistries kan. be myldest of berynge  
@@ -18,14 +18,21 @@ My prowor and my Plowman. Piers shal ben on erþe
 And for to tilie truþe. a teeme shal he haue  
 ¶Grace gaf Piers a teeme. of foure grete Oxen  
 That oon was Luk a large beest. and a lowe chered  
-And Mark and Mathew þe pridde. myghty beestes boþe  
+And Mark and Mathew þe þridde. myghty beestes boþe  
 And Ioyned to hem oon Iohn̄. moost gentil of alle  
 The pris neet of Piers plow. passynge alle oþere  
 ¶And Grace gaf Piers. of his goodnesse foure stottes  
 Al þat hise oxen eriede. þei to harewen after  
 Oon highte Austyn. and Ambrose anoþer  
-Grefori þe grete clerk. and Ierom þe goode  
+Gregori þe grete clerk. and Ierom þe goode  
 Thise foure þe feiþ to teche. folweþ Piers teme  
 And harewede in an hand while. al holy Scripture  
 wiþ two harewes þͭ þei hadde. an oold and a newe  
 Id est vetus testamentum ⁊ nouū  
+¶And Grace gaf greynes. þe Cardynal v̔tues  
+And sew hem in mannes soule. and siþen he tolde hir names  
+Spiritus prudencie. þe firste seed highte  
+And who so ete þat. ymagynen he sholde  
+Er he deide any deeþ. deuyse wel þe ende  
+And lerned men a ladel bugge. wiþ a long stele  
+And caste for to kepe a crokke. to saue þe fatte aboue  
