--- a/transcriptions/for_testing/b_15_17/121v.md
+++ b/transcriptions/for_testing/b_15_17/121v.md
@@ -3,7 +3,7 @@ title: "Transcription of MS Cambridge Piers Plowman B.15.17 folio 121v"
 date: September 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 ¶Blowe hem doun and breke hem. and bite a two þe mores  
