transcribed more of cc 198

--- a/transcriptions/for_testing/cc_198/160r.md
+++ b/transcriptions/for_testing/cc_198/160r.md
@@ -5,7 +5,7 @@ author: G. E. Saretto
 ---
 
 - [x] Transcribed
-- [ ] Double checked
+- [x] Double checked
 
 And so do men if I þe soþe seye schal  
 loke who þat is most pacient in loue  
