--- a/transcriptions/for_testing/cc_198/160v.md
+++ b/transcriptions/for_testing/cc_198/160v.md
@@ -4,7 +4,7 @@ author: G. E. Saretto
 date: July 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 A ȝeer and more lasted þis blisful lijf  
@@ -39,4 +39,7 @@ The empryntyng of hir constillacion̄
 Thurgh which hire grete sorwe gan aswage  
 Sche may nought alway endure in such a rage  
 And eek arneragus in al þis care  
-haþ sent his ... 
+haþ sent his ꝉres home in al þis fare  
+And þat he wolde come hastly aȝayn  
+Oþer hadde þis sorwe hire herte slayn  
+hire frendes sawe hire herte gan to slake  
