--- a/transcriptions/for_testing/b_15_17/122r.md
+++ b/transcriptions/for_testing/b_15_17/122r.md
@@ -3,7 +3,7 @@ title: "Transcription of MS Cambridge Piers Plowman B.15.17 folio 122r"
 date: September 2018
 author: Jenna Schoen
 ---
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 To helpe holy chirche. and hem þͭ it kepeþ  
@@ -20,4 +20,17 @@ Some þoruȝ bedes biddynge. and some þoruȝ pilgrymages
 And oþ̔e pryue penaunces. and sōme þoruȝ penyes delynge  
 ¶And þanne wellede water. for wikkede werkes  
 Egreliche errynge. out of mennes eighen  
-Clennesse out of commune. 
+Clennesse out of commune. and clerkes clene lyuynge  
+Made vnitee holy chirche. in holynesse to stonde  
+¶I care I care noȝt quod Conscience. þouȝ pride come nouþe  
+The lord of lust shal be letted. al þis lente I hope  
+Comeþ quod Conscience. ye cristene and dyneþ  
+That han laboured lelly. al þis lenten tyme  
+Here is breed y blessed. and goddes body þer vnder  
+Grace þoruȝ goddes word. yaf Piers power  
+And myȝtes to maken it. and men to ete it after  
+In help of hir heele. ones in a Monþe  
+Or as ofte as þei hadde nede. þo þat hadde y-paied  
+To Piers pardon þe Plowman. redde quod debes  
+¶How quod al þe comune. þow conseillest Vs to yelde   
+Al þat we owen any wight. er we go to housel  
