--- a/transcriptions/for_testing/cc_198/161r.md
+++ b/transcriptions/for_testing/cc_198/161r.md
@@ -4,7 +4,7 @@ author: G. E. Saretto
 date: September 17 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 And preyed hire on knees for goddes sake  
@@ -13,3 +13,33 @@ Away to dryue hire derke fantasye
 And fynally sche gũnted þat requeste  
 ffor wel sche sawe it was for þe beste  
 Now stood hire castel faste by þe see  
+And often wiþ hire freendes walked sche  
+hire to disporte on þe banke on heih  
+wher as sche many schippe and barge seih  
+Seylinge here cours where hem luste to go  
+But ȝit was þere a parcelle of hir wo  
+ffor to hir self fuloften seyde sche  
+Is þer no schipp of so many as I se  
+wole brynge home my lord þen wolde myn herte  
+Al waryssche of þis bitter peynes smerte  
+Anoþer tyme þer wole sche sitte and þinke  
+And caste hire eyen dounward fro þe brynke  
+But whan sche saugh þe grisly rokkes blake  
+ffor verray fere so wolde hire herte quake  
+þat on hire feet sche mighte nought hire sustene  
+Thenne wolde sche sitte a doun vpon þe grene  
+And pitously in to þe see byholde  
+And sayn right þus wiþ sorowful hertes colde  
+Eterne god þat þurgh þy puruyaunce  
+ledest þe world by certein gou̔naunce  
+In ydelnesse as men sayn ȝe no þing make  
+But lord þese grisely feendly rokkes blake  
+That semen raþer a foul confusion̄  
+Of werk þen any fayr creacion̄  
+Of whiche a parfyt god and a stable  
+why han ȝe wrouȝt þis werk vnresonable  
+ffor by þis werke south north est and west  
+Ther nys y fostred man ne bryd ne best  
+hit doþ no good to my witt but annoyeþ  
+Se ȝe nouȝt lorde how mankynde it destroyeþ  
+An hundreþ þousand bodyes of mankynde  
