--- a/transcriptions/for_testing/cc_198/162v.md
+++ b/transcriptions/for_testing/cc_198/162v.md
@@ -4,7 +4,7 @@ author: G. E. Saretto
 date: September 17 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 That langusshiþ as fuyre doþ in helle  
@@ -12,4 +12,34 @@ And deye seyde he moste as did Ekko
 ffor narsisus þat durste nouȝt telle hir wo  
 In oþer manere þenne ȝe here me seye  
 Ne durst he nouȝt to hire his wo bewreye  
-Saue ꝑaduent...
+Saue ꝑaduentẽ som tyme at daunces  
+There ȝong folk kepen here obẜuaunces  
+hit may wel be he loked on hire face  
+In such a wise as man þat asked grace  
+But no þing wiste sche of his entent  
+Naþeles it happed or þey þennes went  
+By cause þat he was hire neyȝebõre  
+And was a man of worschipe and honõ  
+And hadde knowen him ofte times ȝore  
+þey felle in speche ofte more and more  
+vnto his purpos drowe aurelius  
+And whan he saw his tyme he sayde þus  
+Ma dame ꝙ he by god þat þis world made  
+So þat I wiste it mighte ȝour herte glade  
+I wolde þat day þat ȝour arueragus  
+wente on þe see þat I aurelius  
+had went þat I schulde neuer haue come aȝain  
+ffor wel I woot my seruise is in vayn  
+My guerdon̄ nys but berstyng of myn herte  
+Ma dame reweþ vpon my peynes smerte  
+ffor as wiþ a swerd ȝe may me sle or saue  
+her at ȝoure foot god wolde þat I were graue  
+I haue as now no more leysir for to seye  
+haue mercy on me swete or ȝe wolen do me deye  
+Sche gan to loke vpon aurelius  
+Is þis ȝoure wille ꝙ sche and say ȝe þus  
+Neuer erst ꝙ sche ne wist I what ȝe mente  
+But now aurely I knowe ȝoure entente  
+By þilke god þat ȝaf me soule and lyf  
+Ne schal I neuer be vntrewe wyf  
+In word ne in werk as fer as I haue wit  
