--- a/transcriptions/for_testing/cc_198/162v.md
+++ b/transcriptions/for_testing/cc_198/162v.md
@@ -26,7 +26,7 @@ vnto his purpos drowe aurelius
 And whan he saw his tyme he sayde þus  
 Ma dame ꝙ he by god þat þis world made  
 So þat I wiste it mighte ȝour herte glade  
-I wolde þat day þat ȝour arueragus  
+I wolde þat day þat ȝour arneragus  
 wente on þe see þat I aurelius  
 had went þat I schulde neuer haue come aȝain  
 ffor wel I woot my seruise is in vayn  
