--- a/transcriptions/for_testing/cc_198/164v.md
+++ b/transcriptions/for_testing/cc_198/164v.md
@@ -4,5 +4,42 @@ author: G. E. Saretto
 date: September 18 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
+
+No þing luste he to be ymaginatyff  
+Of any wight hadde spoke whils he was oute  
+To hire of loue he made þer of no doute  
+he nouȝt entendeþ to no such matere  
+But daunceþ Iustiþ and makeþ good cheere  
+As þus in Ioye and blisse I lete hem dwelle  
+And of þe swete Aurelyus wol I telle  
+In langure and in furious tormetz þus  
+Tuo ȝer and more lay wrecche aurelius  
+Or ony foot on erþe he mighte gon  
+No confort in þis tyme nade he non  
+Saue of his broþer which þat was a clerk  
+he knew of al þis wo and of al þis werk  
+ffor to non oþer creature certeyn  
+Of þis matiere ne durste he no word seyn  
+vnder his brest he bar it more secre  
+Then euer did Pamphilius for Galathe  
+his brest was hole wiþouten for to sene  
+But in his herte was ay þe arwe kene  
+And wel ȝe knowen þat a sore sauure  
+In surgerie ful ꝑilous is þe cure  
+But man might touche þe arwe or come þ̔by  
+his broþ̔ wepeþ and wayleþ priuyly  
+Til atte laste him fell in remembũnce  
+That whiles he was at Orlyaunce in ffũnce  
+As ȝonge clerkes þat ben likerous  
+To reden artes þat ben curious  
+Seken in euery halk and euery herne  
+Particuler sciences for to lerne  
+he him remembreþ vpon a day  
+At Orlyaunce in studye a book he say  
+Of magiqꝫ naturell which his felawe  
+That was þat tyme a bachiler of lawe  
+Al were he þere to lerne anoþ̔ craft  
+And priuely vpon his deske y laft  
+This book spak mochli of þis oꝑacion̄s  
