--- a/transcriptions/for_testing/harley_7334/054v.md
+++ b/transcriptions/for_testing/harley_7334/054v.md
@@ -4,7 +4,7 @@ author: G. E. Saretto
 date: September 19 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 Til þat her corn was fair and wel I grounde  
@@ -20,4 +20,28 @@ What wikked way is he gan gan he crye
 The wyf cam lepyng inward wiþ a ren  
 Sche seyde allas ȝour hors goþ to þe fen  
 wiþ wylde mares as fast as he may go  
-...
+vnþank come on his heed þat band him so  
+And he þat bettir schuld han knyt þe Reyne  
+Allas qd Iohñ aleyn|for cristes peyne  
+leg doun þi swerd and I sal myn alswa  
+I is ful wight god wat as is a Ra  
+By goddes hart he sal nat scape vs bathe  
+why nad þou put þe capil in þe lathe  
+Ilhail aleyn by god þou is a fon  
+This sely clerkes speeden hem anoon  
+Toward þe fen boþe aleyn and eek Ion  
+And whan þe myller sawh þat þey were gon  
+he half a busshel of þe flour haþ take  
+And bad his wyf go knede it in a cake  
+he seyde I trowe þe clerkes ben a ferd  
+ȝet can a Miller make a clerkes berd  
+ffor al his art ȝe lat hem go here way  
+lo wher þey goon ȝe lat þe children play  
+They get him nat lightly by my cron̄
+This seely clerkes ronnen vp and don̄  
+wiþ keep keep stand stand Iossa ware derere  
+Ga wightly þou and I sal keep him heere  
+But schortly til þat it was verray night  
+They cowde nat þough þey did al here might  
+here capil cacche it ran away so fast  
+Til in a diche þey caught him atte last  
