--- a/transcriptions/for_testing/harley_7334/086r.md
+++ b/transcriptions/for_testing/harley_7334/086r.md
@@ -4,7 +4,7 @@ author: G. E. Saretto
 date: September 20 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 For deth þat takþ of heigh ⁊ low his rent  
@@ -29,5 +29,18 @@ Now ihū crist þat of his might may sende
 Ioy after wo gouerne vs in his grace  
 And keep ous alle þat ben in þis place  
 Our Ost vppon his styrops stood anoon  
-And seyde good m
-ē herkneth euỷ
+And seyde good mē herkneth euy̔choon
+This was a þrifty tale for þe noones  
+Sir parissh prest qd he for goddes boones  
+Tel out a tale as was þy forward ȝore  
+I see wel þat ȝe lered men in lore  
+Can moche good by goddes dignete  
+The ꝑson̄ him answerde bendicite  
+what eyleþ þe man so synfully to swere  
+Our Ost answerd O Iankyn be ȝe þere  
+I smel a loller in þe wynd qd he  
+Now good mē qd our Oste herkneþ me  
+ffor we schul haue a predicacion̄  
+This loller wolde prechen vs heer som what  
+Nay by my fader soule þat schal he nat  
+Sayde the sompnour he schal heer nauȝt preche  
