done transcribing harley

--- a/transcriptions/for_testing/harley_7334/200r.md
+++ b/transcriptions/for_testing/harley_7334/200r.md
@@ -4,7 +4,7 @@ author: G. E. Saretto
 date: September 21 2018
 ---
 
-- [ ] Transcribed
+- [x] Transcribed
 - [ ] Double checked
 
 WEl sayd by corpus boones quod oure host  
@@ -26,4 +26,22 @@ A tale next if so were þat ȝe wolde
 Now wol ȝe vouche sauf my lady deere  
 Gladly quod sche and sayd in þis manere  
 
-O lord oure lord þy name how merueylous ...
+O lord oure lord þy name how merueylous ¶Dn̄e dn̄s n̄r  
+Is in þis large world I sprad quod sche  
+ffor nought oonly þy laude precious  
+Parformed is by men of heih degre  
+But by mouthes of children þy bounte ¶Ex ore infanciū  
+Parformed is on oure brest soukynge  
+Som tyme schewe þay þin heriynge  
+Wherfore in laude as I best can or may  
+Of þe and of þy white lily flour  
+Which þat þe bar and is a mayde alway  
+To telle a story I wil do my labour  
+Nought þat I may encresce ȝoure honour  
+ffor sche hir silf is honour and roote  
+Of bounte next hir sone and soules boote  
+O modir mayde. O mayde mooder fre  
+O bussh vnbrent brennyng in Moises sight  
+That rauysshedest doun fro þe deite  
+Thurgh þin humblesse þe gost þat in þe alight  
+Of whos vertu he in þin herte pight  
