--- a/transcriptions/for_testing/cp_201/82v.md
+++ b/transcriptions/for_testing/cp_201/82v.md
@@ -14,30 +14,30 @@ he may wel be cald a cōquerour / ⁊ þͭ is c̉st to meene.
 ¶But þe cause þͭ he comeþ þus / wͭ his cros of his passioū.  
 Is to wissen Vs þ̔e wͭ / whan we been y tēptyd.  
 þer wͭ / to fyghte ⁊ defende Vs / fro fallȳg in to synne.  
-⁊ to seen be his sorwe / þͭ who-so loveþ Ioyȝe.  
-To penaunce ⁊ to pouerte / he muste pyttyn hym-selue.  
+⁊ to seen be his sorwe / þͭ who so loVeþ Ioyȝe.  
+To penaūce ⁊ to pou̔te / he muste pyttȳ hym selue.  
 ⁊ mychel woo / in þis world / wylnen ⁊ suffren.  
-¶But to carpe more of crist / ⁊ how he cam to þͭ name.  
-Faythly / for to speke / his fyrste name was Iesus.  
-Þoo he was boore in bedleem / as . bookys boldly tellyn.  
-⁊ cam to take mankynde / boþe kyngys ⁊ angelis.  
-Reuerensed hym ryght fayre / wͭ rycchesse of erthe.  
-Angelis out of heuene / come knelynge ⁊ sungen.  
+¶But to carpe mor̉ of c̉st / ⁊ how he cā to þͭ name.  
+ffaythly / for to speke / his fyrste name was Ihs̄.  
+þoo he was boor̉ in bedleem / as. bookys boldly tellȳ.  
+⁊ cā to take mākynde / boþe kyngys ⁊ angꝉis.  
+Reuerensed hȳ ryght fayr̉ / wͭ rycchesse of erthe.  
+Angꝉis out of heuene / come knelynge ⁊ sūgen.  
 Gloria in excelcis deo.  
-¶Kyngis kemen after / ⁊ kneled to hym ⁊ offreden.  
-Ensens / ⁊ myrre . ⁊ myche gold / wͭ myche mercy asked.  
-Er of ony kenne Catele / þey knowlechid hym . here souereyn.  
+¶kyngis kemen after / ⁊ kneled to hȳ ⁊ offreden.  
+Ensens / ⁊ myrre. ⁊ myche gold / wͭ myche m̔cy asked.  
+Er of ony kenne Cateꝉ / þey knowlechid hȳ. her̉ sou̔eyn.  
 Boþe of sunne . of sond . ⁊ see / ⁊ sythis hoom þey wentyn.  
-In-to here kyngene kyþ / be kennynge of an angel.  
-⁊ þerwith was þe woord / ful-fyld / þe wiche first þou speke  
-Omnia celestia / terrestria flectantur in hoc nomine Iesu.  
-¶For aỻ þe angelis of hevene / at his berthe þey kneliden.  
+In to her̉ kyngene kyþ / be kennȳge of an angel.  
+⁊ þerwͭ was þe woord / ful fyld / þe wiche first þͧ speke  
+Oīa celestia / t̔rest̉a flectantͬ ī h̊ noīe Ih̉u.  
+¶ffor aỻ þe angelis of hevene / at his berthe þey kneliden.  
 ⁊ al þe witt in þis world / was þoo in þre þynges.  
-Resoun . ⁊ Ryghtwisnesse / ⁊ rewþe / þey offreden.  
-¶Where-fore / ⁊ why  wyse men þͭ tyme.  
-Boþe Maistris ⁊ men y-leernede / Magy hem nameden.  
-¶Þe ton kyng cam wͭ resoun / y-kouered vndir ensense.  
-Þe toþir kyng sytthe / sooþly he offrede.  
-Ryghtwyȝsnesse vndir reed gold / þͭ lasten shal euere.  
-For it shal turne tresoun / to ryght ⁊ to trewthe.  
-Þe þrydde kyng þo cam / ⁊ knelid to Iesu lowe.  
+Resoū. ⁊ Ryghtwisnesse / ⁊ rewþe / þey offreden.  
+¶Where for̉ / ⁊ why ؛ wyse men þͭ tyme.  
+Boþe Maist̉s ⁊ mē y leerneɖ / Magy hem nameden.  
+¶Þe ton kyng cam wͭ resoū / y kou̔ed Vndir ensense.  
+þe toþ̔ kyng sytthe / sooþly he offrede.  
+Ryghtwyȝsnesse Vndir reed gold / þͭ lasten shal eu̔e.  
+ffor it shal turne tresoun / to ryght / ⁊ to trewthe.  
+þe þrydde kyng þo cam / ⁊ knelid to Ihū lowe.  
